--- a/Pages/TeamData/Fielding.cshtml
+++ b/Pages/TeamData/Fielding.cshtml
@@ -8,7 +8,7 @@
 
 <h2 class="section-title">Fielding Stats</h2>
 
-@* ----- Controls: single dropdown used to filter by StatType (or show all) ----- *@
+@* -- Controls: single dropdown used to filter by StatType (or show all) -- *@
 <form method="get">
     <div class="table-selector">
         <select id="statSelect"
