--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 StrikeData - Baseball Statistics Platform</p>
+        <p>StrikeData - Baseball Statistics Platform</p>
     </footer>
 
     @* Global client-side helpers (sorting, stat descriptions, etc.).
